<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <Button
        android:id="@+id/back1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/black"
        android:backgroundTint="@color/color1"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonA"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:backgroundTint="@color/color2"
                android:text="@string/lesson1"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonB"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:backgroundTint="@color/color2"
                android:text="@string/lesson2"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:backgroundTint="@color/color2"
                android:text="@string/lesson3"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>