<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1000">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:layout_marginLeft="8dp"
                android:id="@+id/back1b2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:backgroundTint="@color/color1"
                android:text="@string/back"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/question1b2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/answerOfquestion1b2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_weight="1"
                    android:hint="заполните ответ"
                    android:maxLines="1"
                    android:minHeight="48dp"
                    android:textColor="@color/color2"
                    android:textColorHint="@color/color2"
                    android:backgroundTint="@color/color2"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginEnd="4dp"
                    android:id="@+id/dropdawn_1b2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/color1"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/answer_1b2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:inputType="none"
                        android:textColor="@color/black"
                        tools:ignore="LabelFor,TouchTargetSizeCheck">

                    </AutoCompleteTextView>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>







            <TextView
                android:id="@+id/answer1b2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/textColor"
                android:textStyle="bold" />



        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_marginStart="4dp"
            android:id="@+id/submit1b2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="6dp"
            android:textSize="10sp"
            android:textStyle="bold"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:backgroundTint="@color/color1"/>

        <Button
            android:id="@+id/next1b2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="6dp"
            android:text="@string/next"
            android:textSize="10sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:backgroundTint="@color/color1"/>
    </LinearLayout>



</LinearLayout>