<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1000">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <Button
        android:id="@+id/back6"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/back"
        android:textColor="@color/black"
        android:backgroundTint="@color/color1"/>


    <TextView
        android:id="@+id/question1a1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/textColor"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/answers_border"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quest1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/text_view_border"
            android:gravity="center_vertical"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdawn1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:background="@color/color1">

            <AutoCompleteTextView
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/black"
                android:inputType="none"
                android:textColor="@color/black"
                tools:ignore="LabelFor,TouchTargetSizeCheck">

            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/answers_border">

        <TextView
            android:id="@+id/quest2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:background="@drawable/text_view_border"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdawn2"
            android:background="@color/color1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck">

            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/answers_border">

        <TextView
            android:id="@+id/quest3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:background="@drawable/text_view_border"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdawn3"
            android:background="@color/color1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/answer3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck">

            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/answers_border">

        <TextView
            android:id="@+id/quest4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:background="@drawable/text_view_border"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdawn4"
            android:background="@color/color1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/answer4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck">

            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:background="@drawable/answers_border">

        <TextView
            android:id="@+id/quest5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:background="@drawable/text_view_border"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdawn5"
            android:background="@color/color1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/answer5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:textColor="@color/black"
                tools:ignore="TouchTargetSizeCheck">

            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/answer1a1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/textColor"
        android:textStyle="bold"/>


</LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit1a1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/color1"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/next1a1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:backgroundTint="@color/color1"
            android:layout_weight="1"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold" />
    </LinearLayout>



</LinearLayout>